--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   color: rgb(30, 30, 30);
 }
 body {
-  background-color: rgb(195, 227, 255);
+  background-color: rgb(93, 181, 240);
   line-height: 3rem;
   font-size: 1.2rem;
 }
@@ -29,13 +29,13 @@ p {
   margin: 10px;
 }
 .profile {
-  width: 15rem;
-  border-radius: 50%;
-  filter: saturate(0.5);
+  width: 20rem;
+  border-radius: 80%;
+  /* filter: saturate(0.5); */
 }
-.profile:hover {
+/* .profile:hover {
   filter: saturate(1);
-}
+} */
 p {
   text-align: center;
 }
